<resources>
    <string name="app_name">StakDice</string>
    <string name="placeholder_zero">0</string>
    <string name="placeholder_switch">Switch</string>
    <string name="placeholder_updown">UP/Down</string>
    <string name="placeholder_flip">Flip</string>
    <string name="placeholder_reroll">Reroll</string>
    <string name="card_image_view_image">Card Image</string>
    <string name="card_name">CARD NAME</string>
    <string name="play_matt">play matt</string>
    <string name="string_difficulty_easy">Easy</string>
    <string name="string_difficulty_medium">Medium</string>
    <string name="string_difficulty_hard">Hard</string>
    <string name="string_difficulty">Difficulty</string>
    <string name="roll_dice_image">Roll dice Image</string>
    <string name="roll">R\no\nl\nl</string>
    <string name="undo">U\nn\nd\no</string>
    <string name="validate">Validate</string>
    <string name="round">Round: </string>
    <string name="sign_out">Sign Out</string>
    <string name="passed">Passed!</string>
    <string name="failed">Failed</string>
    <string name="stakCard">StakCard</string>
    <string name="main_menu">Main Menu</string>
    <string name="trophy_room">Trophy Room</string>
    <string name="email">EMAIL</string>
    <string name="logout">LOGOUT</string>
    <string name="stak">STAK</string>
</resources>
