<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/panel_beige_redone"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/passed"
        android:textSize="32sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/game_matt_main_menu_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonlong_grey_redone"
            android:text="@string/main_menu" />

        <Button
            android:id="@+id/game_matt_stack_card_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonlong_grey_redone"
            android:text="@string/trophy_room" />

    </LinearLayout>


</LinearLayout>