<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:id="@+id/stak_card_view">

    <ImageView
        android:id="@+id/image_stak_card"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/card_image_view_image"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toStartOf="@+id/stak_view_strength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stak_view_card_name"
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:text="@string/card_name"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_stak_card"
        app:layout_constraintTop_toBottomOf="@+id/stak_view_toughness" />

    <TextView
        android:id="@+id/stak_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:text="@string/string_difficulty"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stak_view_knowledge" />

    <TextView
        android:id="@+id/stak_view_strength"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/strength_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintEnd_toStartOf="@+id/stak_view_toughness"
        app:layout_constraintStart_toEndOf="@+id/image_stak_card"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stak_view_toughness"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/toughness_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintEnd_toStartOf="@+id/stak_view_agility"
        app:layout_constraintStart_toEndOf="@+id/stak_view_strength"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stak_view_agility"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/agility_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintEnd_toStartOf="@+id/stak_view_knowledge"
        app:layout_constraintStart_toEndOf="@+id/stak_view_toughness"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stak_view_knowledge"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/knowledge_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stak_view_agility"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>