<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trophy_detail_custom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_thick_border"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/trophy_room_detail_image"
        android:layout_width="303dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:layout_margin="32dp" />

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/grey_panel"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trophy_room_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/card_name" />

        <TextView
            android:id="@+id/difficulty_detail_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_difficulty" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:background="@drawable/grey_panel"
        android:orientation="vertical">


        <TextView
            android:id="@+id/description_detail_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trophy_detail_strength"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/strength_border"
            android:gravity="center"
            android:text="@string/placeholder_zero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trophy_detail_toughness"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/toughness_border"
            android:gravity="center"
            android:text="@string/placeholder_zero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trophy_detail_agility"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/agility_border"
            android:gravity="center"
            android:text="@string/placeholder_zero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trophy_detail_knowledge"
            android:layout_width="64dp"
            android:layout_height="64dp"

            android:background="@drawable/knowledge_border"
            android:gravity="center"
            android:text="@string/placeholder_zero"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>