<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMatt"
    android:background="@color/colorBackground">


    <ImageView
        android:id="@+id/image_Card"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/card_image_view_image" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="18dp"
        android:autoSizeTextType="uniform"
        android:text="@string/card_name"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_strength"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="13dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/strength_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/image_Card"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_toughness"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="13dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/toughness_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toStartOf="@+id/text_view_agility"
        app:layout_constraintStart_toEndOf="@+id/text_view_strength"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_agility"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="50dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/agility_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/text_view_knowledge"
        app:layout_constraintStart_toEndOf="@+id/text_view_toughness"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_knowledge"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/knowledge_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_agility"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBackgroundAccent"
        app:layout_constraintBottom_toTopOf="@+id/button_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/play_matt" />

    <TextView
        android:id="@+id/textView_strength_row_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/strength_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_strength_row_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/strength_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toTopOf="@+id/textView_strength_row_2"
        app:layout_constraintStart_toStartOf="@+id/textView_strength_row_2" />

    <Button
        android:id="@+id/button_switch"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:background="@drawable/strength_border"
        android:gravity="center"
        android:text="@string/placeholder_switch"
        app:layout_constraintBottom_toTopOf="@+id/textView_strength_row_3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_strength_row_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/strength_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toTopOf="@+id/textView_strength_row_1"
        app:layout_constraintStart_toStartOf="@+id/textView_strength_row_1" />

    <TextView
        android:id="@+id/textView_agility_row_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/agility_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_toughness_row_2"
        app:layout_constraintStart_toStartOf="@+id/textView_agility_row_1" />

    <TextView
        android:id="@+id/textView_knowledge_row_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/knowledge_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_agility_row_2"
        app:layout_constraintEnd_toEndOf="@+id/textView_knowledge_row_3"
        app:layout_constraintStart_toEndOf="@+id/textView_agility_row_2" />

    <TextView
        android:id="@+id/textView_knowledge_row_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/knowledge_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_agility_row_1"
        app:layout_constraintEnd_toEndOf="@+id/textView_knowledge_row_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_agility_row_1" />

    <TextView
        android:id="@+id/textView_agility_row_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/agility_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_toughness_row_1"
        app:layout_constraintStart_toEndOf="@+id/textView_toughness_row_1" />

    <TextView
        android:id="@+id/textView_toughness_row_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/toughness_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_strength_row_1"
        app:layout_constraintStart_toEndOf="@+id/textView_strength_row_1" />

    <TextView
        android:id="@+id/textView_toughness_row_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/toughness_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_strength_row_2"
        app:layout_constraintStart_toStartOf="@+id/textView_toughness_row_1" />

    <TextView
        android:id="@+id/button_updown"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
       android:textSize="16sp"
        android:background="@drawable/toughness_border"
        android:gravity="center"
        android:text="@string/placeholder_updown"
        app:layout_constraintBottom_toTopOf="@+id/textView_toughness_row_3"
        app:layout_constraintStart_toEndOf="@+id/button_switch" />

    <TextView
        android:id="@+id/textView_toughness_row_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/toughness_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_strength_row_3"
        app:layout_constraintStart_toStartOf="@+id/textView_toughness_row_2" />

    <TextView
        android:id="@+id/textView_agility_row_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/agility_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_toughness_row_3"
        app:layout_constraintStart_toStartOf="@+id/textView_agility_row_2" />

    <TextView
        android:id="@+id/textView_knowledge_row_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/knowledge_border"
        android:gravity="center"
        android:text="@string/placeholder_zero"
        app:layout_constraintBottom_toBottomOf="@+id/textView_agility_row_3"
        app:layout_constraintStart_toEndOf="@+id/textView_agility_row_3" />

    <Button
        android:id="@+id/button_flip"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:background="@drawable/agility_border"
        android:gravity="center"
        android:text="@string/placeholder_flip"
        app:layout_constraintBottom_toTopOf="@+id/textView_agility_row_3"
        app:layout_constraintStart_toEndOf="@+id/button_updown" />

    <Button
        android:id="@+id/button_reroll"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:background="@drawable/knowledge_border"
        android:gravity="center"
        android:text="@string/placeholder_reroll"
        app:layout_constraintBottom_toTopOf="@+id/textView_knowledge_row_3"
        app:layout_constraintStart_toEndOf="@+id/button_flip" />


</androidx.constraintlayout.widget.ConstraintLayout>